# Local_RAG_agent_LLaMA3

./: README.md  README_FR.md  install_poetry.txt  pyproject.toml  rag.ipynb
