[tool.poetry]
name = "local-rag-agent-llama3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-nomic = "^0.1.3"
langchain-ollama = "^0.2.0"
ipykernel = "^6.29.5"
langchain = "^0.3.1"
langchain-community = "^0.3.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
